# esp-fs-logger

./: .gitignore  CMakeLists.txt  README.txt  partitions.csv  platformio.ini  platformio.yml  sdkconfig.defaults
data/: csv.htm  index.html
data/assets/css/: custom_csv.css  index.css  style.css
data/assets/js/: app.js  csv.js  index.js  min.js
data/config/: config.json
include/: app_config.h  app_state.h  log_storage.h  network.h  system_init.h  uart_service.h  web_server.h
lib/async-esp-fs-webserver/: pio_ci_ex_ALL.bat  platformio.ini
lib/async-esp-fs-webserver/built-in-webpages/: readme.md
lib/async-esp-fs-webserver/built-in-webpages/edit/: edit.htm
lib/async-esp-fs-webserver/built-in-webpages/setup/: app.js  setup.htm  style.css
lib/async-esp-fs-webserver/built-in-webpages/setup/build_setup/: minify.js  package.json  stringConverter.js
lib/async-esp-fs-webserver/examples/binaryWebSocket/: binaryWebSocket.ino
lib/async-esp-fs-webserver/examples/csvLogger/: csvLogger.ino
lib/async-esp-fs-webserver/examples/csvLoggerSD/data/: index.htm
lib/async-esp-fs-webserver/examples/handleFormData/: handleFormData.ino
lib/async-esp-fs-webserver/examples/highcharts/data/: script.js
lib/async-esp-fs-webserver/src/: AsyncFsWebServer.cpp  AsyncFsWebServer.h  SerialLog.h  SetupConfig.hpp  Version.cpp  customElements.h
spiffs_data/: index.html
spiffs_data/assets/: style.css
src/: CMakeLists.txt  app_state.cpp  log_storage.cpp  main.cpp  network.cpp  system_init.cpp  uart_service.cpp  web_server.cpp
(+6 files in other folders)
